<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/filtered_categories"
            android:icon="@drawable/ic_filter_list"
            android:title="@string/filtered_categories" />
        <item
            android:id="@+id/filtered_words"
            android:icon="@drawable/ic_filter_list"
            android:title="@string/filtered_words" />

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />

        </menu>
    </item>

</menu>
