<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Login_Fragment_Iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/d16"
        android:layout_above="@id/Login_Fragment_Til_Name"
        android:layout_marginTop="@dimen/d80"
        android:layout_marginEnd="@dimen/d16"
        android:src="@drawable/ic_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_Fragment_Til_Name"
        style="@style/textinputlayoutTheme"
        android:layout_centerInParent="true"
        >

        <android.support.design.widget.TextInputEditText
            style="@style/textedittextTheme"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_your_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_Fragment_Til_Password"
        style="@style/textinputlayoutTheme"
        android:layout_below="@id/Login_Fragment_Til_Name"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            style="@style/textedittextTheme"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/Login_Fragment_Cb_Remember_Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_Fragment_Til_Password"
        android:layout_marginStart="@dimen/d34"
        android:layout_marginEnd="@dimen/d16"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/Login_Fragment_Btn_Login"
        style="@style/buttonTheme"
        android:layout_below="@id/Login_Fragment_Cb_Remember_Me"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d40"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/d16"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Login_Fragment_Tv_Forget_Password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_your_password"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Login_Fragment_Tv_Register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>


