<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/Add_Word_Fragment_Iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:layout_marginStart="@dimen/d16"
        android:layout_marginTop="@dimen/d90"
        android:layout_marginEnd="@dimen/d16"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/Add_Word_Fragment_Tv_Add_Category_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_word_hint"
        android:textColor="@color/black" />


    <Spinner
        android:id="@+id/Add_Word_Fragment_Sp_Categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d90"
        android:entries="@array/Categories_arr"
        android:layout_marginTop="@dimen/d34"
        android:layout_marginEnd="@dimen/d90" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Add_Word_Fragment_Til_Annoying_Word"
        style="@style/textinputlayoutTheme"
        >

        <android.support.design.widget.TextInputEditText
            style="@style/textedittextTheme"
            android:drawableStart="@drawable/ic_annoying_face"
            android:hint="@string/enter_annoying_word"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Add_Word_Fragment_Btn_Add"
        style="@style/buttonTheme"
        android:text="@string/add" />

    <TextView
        android:id="@+id/Add_Word_Fragment_Tv_Back_To_Words_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d24"
        android:layout_marginTop="@dimen/d28"
        android:layout_marginEnd="@dimen/d24"
        android:layout_marginBottom="@dimen/d28"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="@dimen/d8"
        android:text="@string/back_to_words_list"
        android:textColor="@color/black" />



</LinearLayout>



</ScrollView>