<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/Forget_Password_Fragment_Iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:layout_marginStart="@dimen/d16"
        android:layout_marginTop="@dimen/d150"
        android:layout_marginEnd="@dimen/d16"
        android:src="@drawable/ic_logo"
        android:layout_alignParentTop="true"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/Forget_Password_Fragment_Til_Email_Address"
        style="@style/textinputlayoutTheme"
        android:layout_below="@id/Forget_Password_Fragment_Iv_Logo"
        >

        <android.support.design.widget.TextInputEditText
            android:drawableStart="@drawable/ic_email"
            style="@style/textedittextTheme"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Forget_Password_Fragment_Btn_Send_Code"
        style="@style/buttonTheme"
        android:layout_below="@id/Forget_Password_Fragment_Til_Email_Address"
        android:text="@string/send_code"
        />



    <TextView
        android:id="@+id/Forget_Password_Fragment_Tv_back"
        android:drawableStart="@drawable/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/d34"
        android:layout_below="@id/Forget_Password_Fragment_Btn_Send_Code"
        android:drawablePadding="@dimen/d16"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/d8"
        />

</RelativeLayout>



</ScrollView>