<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/New_Password_Fragment_Iv_Logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:layout_marginStart="@dimen/d24"
        android:layout_marginTop="@dimen/d80"
        android:layout_marginEnd="@dimen/d24"
        android:layout_above="@id/New_Password_Fragment_Til_Password"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/New_Password_Fragment_Til_Password"
        style="@style/textinputlayoutTheme"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            style="@style/textedittextTheme"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/New_Password_Fragment_Til_Confirm_Password"
        style="@style/textinputlayoutTheme"
        android:layout_below="@id/New_Password_Fragment_Til_Password"
        android:layout_marginTop="@dimen/d16"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            style="@style/textedittextTheme"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/New_Password_Fragment_Btn_Change"
        style="@style/buttonTheme"
        android:text="@string/change"
        android:layout_below="@id/New_Password_Fragment_Til_Confirm_Password"
        />

</RelativeLayout>