<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/d28">

        <ImageView
            android:id="@+id/Add_Category_Fragment_Iv_Logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d150"
            android:layout_marginStart="@dimen/d16"
            android:layout_marginTop="@dimen/d40"
            android:layout_marginEnd="@dimen/d16"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/Add_Category_Fragment_Tv_Add_Category_Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_hint"
            android:textColor="@color/black" />


        <Spinner
            android:id="@+id/Add_Category_Fragment_Sp_Categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Categories_arr"
            android:layout_marginStart="@dimen/d24"
            android:layout_marginTop="@dimen/d34"
            android:layout_marginEnd="@dimen/d24" />

        <Button
            android:id="@+id/Add_Category_Fragment_Btn_Add"
            style="@style/buttonTheme"
            android:text="@string/add" />

        <TextView
            android:id="@+id/Add_Category_Fragment_Tv_Back_To_Categories_List"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d24"
            android:layout_marginTop="@dimen/d28"
            android:layout_marginEnd="@dimen/d24"
            android:layout_marginBottom="@dimen/d28"
            android:drawableStart="@drawable/ic_back"
            android:drawablePadding="@dimen/d8"
            android:text="@string/back_to_categories_list"
            android:textColor="@color/black" />

    </LinearLayout>


</ScrollView>